<resources>

    <string name="app_name">Food Runner</string>
    <string name="food_runner">Food Runner</string>
    <string name="home">Home</string>
    <string name="faq">FAQs</string>
    <string name="profile">My  Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="log_out">Log out</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="mobile_number">Mobile Number (10 digits)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_now">Don\'t have an account? Sign up now</string>
    <string name="et_name">Name (Min. 3 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_register">Mobile Number</string>
    <string name="deliver_address">Delivery Address</string>
    <string name="register_password">Password (Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_email">ayush.tickoo282000@gmail.com</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="list_item">List Item</string>
    <string name="name_of_restaurant">Name Of Restaurant</string>
    <string name="q1_faq">Q1. Functions of this App?</string>

    <string name="preference_file_name">FoodRunnerApp</string>
    <string name="change_password">change password</string>
    <string name="enter_new_password">enter new password</string>
    <string name="confirm_new_password">confirm password</string>
    <string name="enter_your_email_id">enter your email-id</string>
    <string name="reset_password">reset password</string>
    <string name="txt_reset">Enter your e-mail to get a link to reset the profile password</string>
    <string name="confirm_email">enter your email-id again</string>
    <string name="menu_item">Menu Item</string>
    <string name="add">+ADD</string>
    <string name="remove">-REMOVE</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="rs_200">Rs. 200</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="restaurant_items">Restaurant Items:</string>
    <string name="item_name">Item Name</string>
    <string name="item_cost">Rs. 200</string>
    <string name="start">-</string>
    <string name="order">Orders:</string>

</resources>