<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:weightSum="10">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/start"
            android:textAlignment="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/txtItemNameCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textSize="18sp"
            android:layout_weight="7"/>

        <TextView
            android:id="@+id/txtItemCostCart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/item_cost"
            android:textAlignment="center"
            android:layout_weight="2"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>