<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:background="@color/colorPrimary"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_name"
        android:maxLines="1"
        android:text="Ayush"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/edit_round_square"
        android:drawableStart="@drawable/ic_action_profile"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:drawableStart="@drawable/ic_email"
        android:text="ayush.tickoo282000@gmail.com"
        android:layout_below="@+id/etName"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/edit_round_square"
        android:maxLines="1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/etMobileRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_register"
        android:text="7347531846"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/edit_round_square"
        android:drawableStart="@drawable/ic_action_phone_login"
        android:maxLines="1"
        android:maxLength="10"
        android:layout_below="@+id/etEmail"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:inputType="number"/>

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/deliver_address"
        android:text="Mohali"
        android:layout_below="@+id/etMobileRegister"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/edit_round_square"
        android:drawableStart="@drawable/ic__home"
        android:maxLines="1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:maxLength="200"
        android:padding="10dp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAddress"
        android:text="qwerty"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/edit_round_square"
        android:drawableStart="@drawable/ic_action_password_login"
        android:hint="@string/register_password"
        android:maxLines="1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="qwerty"
        android:layout_below="@+id/etPasswordRegister"
        android:hint="@string/confirm_password"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/edit_round_square"
        android:drawableStart="@drawable/ic_action_password_login"
        android:maxLines="1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_round_square_button"
        android:layout_below="@+id/etConfirmPassword"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:text="@string/register"/>

</RelativeLayout>