<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/imgForgotPasswordLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/food_runner_icon" />

    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgForgotPasswordLogo"
        android:padding="10dp"
        android:text="@string/txt_reset"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/etForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtForgot"
        android:layout_margin="10dp"
        android:background="@drawable/edit_round_square"
        android:hint="@string/enter_your_email_id"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="#000000"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/etForgotConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etForgot"
        android:layout_margin="10dp"
        android:background="@drawable/edit_round_square"
        android:hint="@string/confirm_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_below="@+id/etForgotConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/edit_round_square_button"
        android:text="@string/reset_password"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</RelativeLayout>