<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp">

    <LinearLayout

        android:id="@+id/cardViewMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="7">

            <TextView
                android:id="@+id/menuItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="#FFFFFF"
                android:text="@string/menu_item"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/menuItemCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="#FFFFFF"
                android:text="@string/rs_200"
                android:textAlignment="textStart"
                android:textSize="12sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <Button
                android:id="@+id/btnMenuAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_menu_add_background"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/add"
                android:textColor="#FFFFFF" />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>